2017-12-02  Werner Lemberg  <wl@gnu.org>

	[ftview] Fix `-l' option.

	* src/ftview.c (usage): Fix reported range.
	(parse_cmdline) <l>: Fix range checking.
	Set `handle->lcd_mode'; without this, there is no effect at
	start-up.

	* src/ftview.1: Fix argument range of `-l'.

2017-10-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ttdebug.c: Fix compilation on Windows.

2017-10-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c: Use integer for `scale'. Other tweaks.

2017-10-16  Colin Fahey  <cpfahey@gmail.com>

	* src/output.c (put_unicode_be16_string): Fix UTF16 default.

2017-10-14  Werner Lemberg  <wl@gnu.org>

	[ftbench] Add new test for creating face and loading glyph together.

	This will be test `k'.

	* src/ftbench.c (FT_BENCH_NEW_FACE_AND_LOAD_GLYPH): New enum value.
	(bench_desc): Updated.
	(test_new_face_and_load_glyph): New function.
	(main): Handle it.

	(test_image_cache, test_sbit_cache): Tag unused variables.

	* src/ftbench.1: Updated.

2017-10-14  Werner Lemberg  <wl@gnu.org>

	[ftbench] New option `-j' to specify last glyph index.

	* src/ftbench.c (last_index): New global variable.
	(test_load, test_load_advances, test_render, test_embolden,
	test_get_glyph, test_get_cbox, test_get_bbox, test_image_cache,
	test_sbit_cache, get_charset): Use it.
	(usage): Updated.
	(main): Handle `-j'.
	Initialize `last_index'.
	Update test output.

2017-10-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (grid_status_draw_outline): Show ascender and descender.

2017-10-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgamma.c (Render_Bitmap): Ignore target flow.

2017-10-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/win32/grwin32.c (gr_win32_surface_set_title): Small fix.

2017-10-04  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Correctly handle MM data.

	We have to reload the MM data after the cache gets reset.

	* src/ftgrid.c (event_font_change): Move source code up in file.